added logo and change the tag line

--- a/index.html
+++ b/index.html
@@ -52,24 +52,28 @@
                     <div class="wrapper-text">
                         <h5 class="text-center">WE BRING YOUR HOME TO</h5>
                         Dream Colors</div>
-                    <p>Our experience ensures that your projects will be done right and with the upmost professionalism.</p>
+                    <p>Bringing Your Imagination to Life, One Color at a Time.</p>
                 </div>
                 <div class="wrapper-two">
                   <div class="wrapper-text">
                     <h5 class="text-center">WE BRING YOUR HOME TO</h5>
                     Dream Colors</div>
-                  <p>Our experience ensures that your projects will be done right and with the upmost professionalism.</p>
+                  <p>Bringing Your Imagination to Life, One Color at a Time.</p>
                 </div>
                 <div class="wrapper-three">
                   <div class="wrapper-text">
                     <h5 class="text-center">WE BRING YOUR HOME TO</h5>
                     Dream Colors</div>
-                  <p>Our experience ensures that your projects will be done right and with the upmost professionalism.</p>
+                  <p>Bringing Your Imagination to Life, One Color at a Time.</p>
                 </div>
             </div>
 
 
             <!-- mobile menu -->
+            <div class="left-header-mobile">
+                <img src="images/logo.png" alt="">
+                <p class="text-white">Making Homes Colorful</p>
+            </div>
             <button class="hamburger">&#9776;</button>
             <button class="cross">&#735;</button>
             <div class="menu">
