--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                     <div class="wrapper-text">
                         <h5 class="text-center">WE BRING YOUR HOME TO</h5>
                         Dream Colors</div>
-                    <p>Bringing Your Imagination to Life, One Color at a Time.</p>
+                    <p>Innovative Colors, Unmatched Quality, Affordable Excellence</p>
                 </div>
                 <div class="wrapper-two">
                   <div class="wrapper-text">
                     <h5 class="text-center">WE BRING YOUR HOME TO</h5>
                     Dream Colors</div>
-                  <p>Bringing Your Imagination to Life, One Color at a Time.</p>
+                  <p>Innovative Colors, Unmatched Quality, Affordable Excellence</p>
                 </div>
                 <div class="wrapper-three">
                   <div class="wrapper-text">
                     <h5 class="text-center">WE BRING YOUR HOME TO</h5>
                     Dream Colors</div>
-                  <p>Bringing Your Imagination to Life, One Color at a Time.</p>
+                  <p>Innovative Colors, Unmatched Quality, Affordable Excellence</p>
                 </div>
             </div>
 
@@ -186,8 +186,8 @@
                         <div class="col-12 col-md-6 col-lg-6 col-sm-12">
                             <div class="about-content d-flex flex-column gap-4">
                                 <h4 class="about-heading">About Us</h4>
-                            <p class="about-p m-0">At Ruturang Paints, we believe that every space has the potential to be a work of art. Our passion for painting goes beyond brushes and canvas; it's about transforming ordinary walls and surfaces into extraordinary masterpieces.</p>
-                            <p class="about-p">As we embarked on this artistic journey, we quickly realized that painting isn't just about color on a surface; it's about emotion, expression, and creating an environment that inspires and uplifts. We've taken this philosophy to heart in every project we undertake, whether it's residential, commercial, or artistic in nature.</p>
+                            <p class="about-p m-0">At Ruturang Paints, we specialize in crafting water-based paints. Our unwavering commitment to providing products of exceptional quality is deeply ingrained in our values. If you're in search of something unique, you've come to the right place. Our core philosophy revolves around industriousness and innovation, with a keen focus on understanding and fulfilling our customers' requirements. We not only keep up with the latest trends but also ensure that our products meet the highest standards. Offering superior paint solutions at competitive prices is a source of immense pride for us.</p>
+                            <p class="about-p">We have distinguished ourselves by developing an exclusive array of environmentally friendly products, including our Water-Based Emulsion, PU-Based Polymer Putty, Water-Based Luster, and Water-Based Enamel. Notably, our most ground breaking offering, Cool Star, is a heat-reflective coating that not only adds a distinctive touch to your living spaces but also enhances energy efficiency.</p>
                             <div class="about-paint-red">
                                 <img src="images/phone-img.png" alt="">
                                 <h4 class="headings text-white">+91 86000 13592</h4>
