--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                     Dream Colors</div>
                   <p>Innovative Colors, Unmatched Quality, Affordable Excellence</p>
                 </div>
-                <div class="wrapper-three">
+                <!-- <div class="wrapper-three">
                   <div class="wrapper-text">
                     <h5 class="text-center">WE BRING YOUR HOME TO</h5>
                     Dream Colors</div>
                   <p>Innovative Colors, Unmatched Quality, Affordable Excellence</p>
-                </div>
+                </div> -->
             </div>
 
 
@@ -186,7 +186,7 @@
                         <div class="col-12 col-md-6 col-lg-6 col-sm-12">
                             <div class="about-content d-flex flex-column gap-4">
                                 <h4 class="about-heading">About Us</h4>
-                            <p class="about-p m-0">At Ruturang Paints, we specialize in crafting water-based paints. Our unwavering commitment to providing products of exceptional quality is deeply ingrained in our values. If you're in search of something unique, you've come to the right place. Our core philosophy revolves around industriousness and innovation, with a keen focus on understanding and fulfilling our customers' requirements. We not only keep up with the latest trends but also ensure that our products meet the highest standards. Offering superior paint solutions at competitive prices is a source of immense pride for us.</p>
+                            <p class="about-p m-0">At Ruturang Paints, we specialize in crafting water-based paints. Our unwavering commitment to provide products of exceptional quality is deeply ingrained in our values. If you're in search of something unique, you've come to the right place. Our core philosophy revolves around industriousness and innovation, with a keen focus on understanding and fulfilling our customers' requirements. We not only keep up with the latest trends but also ensure that our products meet the highest standards. Offering superior paint solutions at competitive prices is a source of immense pride for us.</p>
                             <p class="about-p">We have distinguished ourselves by developing an exclusive array of environmentally friendly products, including our Water-Based Emulsion, PU-Based Polymer Putty, Water-Based Luster, and Water-Based Enamel. Notably, our most ground breaking offering, Cool Star, is a heat-reflective coating that not only adds a distinctive touch to your living spaces but also enhances energy efficiency.</p>
                             <div class="about-paint-red">
                                 <img src="images/phone-img.png" alt="">
@@ -200,7 +200,7 @@
 
             <div class="why-choose-us p-5">
                 <h4 class="about-heading text-center">Why Choose Us</h4>
-                <p class="why-p">We are dedicated to producing the highest quality paints that stand the test of time. Our extensive research and development, along with rigorous quality control measures, ensure that every can of paint that bears our name is a masterpiece in itself.</p>
+                <p class="why-p">We are dedicated to produce the highest quality paints that stand the test of time. Our extensive research and development, along with rigorous quality control measures, ensure that every can of paint that bears our name is a masterpiece in itself.</p>
 
                 <div class="row p-5">
                     <div class="col-12 col-md-3 col-lg-3 col-sm-12">
@@ -251,12 +251,12 @@
                 <div class="elementor-element elementor-element-2341dd8 elementor-widget elementor-widget-image" data-id="2341dd8" data-element_type="widget" data-widget_type="image.default">
                     <div class="elementor-widget-container">
                     <div class="elementor-image">
-                    <img decoding="async" width="100%" height="107" src="images/contact-upper-patch.png" alt="faq-section-pattern"> </div>
+                    <img width="100%" height="107" src="images/contact-upper-patch.png" alt="faq-section-pattern"> </div>
                     </div>
                     </div>
                 <div class="contact-inner p-5">
                     <div class="row">
-                        <div class="col-12 col-md-4 col-lg-4 col-sm-12">
+                        <div class="col-12 col-md-4 col-lg-4 col-sm-12 p-5 pt-0">
                             <div class="contact-form-container">
                                 <div class="form-heading">
                                     <h4 class="headings text-center">Contact Us</h4>
@@ -282,7 +282,7 @@
                                         <div class="links">
                                             <img src="images/location.png" alt="">
                                             <div class="links-content">
-                                                <h4>Our Office Address</h4>
+                                                <h4>Corporate Office Address : RBD Paints</h4>
                                                 <p class="m-0">Office No. 1001, 10th Floor, Ivory Toer, Vasant Baug Society, Bibewadi, Pune, Maharashtra - 411037</p>
                                             </div>
                                         </div>
@@ -300,7 +300,7 @@
                                         <div class="links">
                                             <img src="images/location.png" alt="">
                                             <div class="links-content">
-                                                <h4>Factory Address</h4>
+                                                <h4>Factory Address : RBD Paints</h4>
                                                 <p class="m-0">Plot No. A - 23, MIDC, Deoli, Wardha, Maharashtra - 442101</p>
                                             </div>
                                         </div>
